examples/test/testpolicy6487.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6487
  namespace: namespace386
spec:
  podSelector:
    matchLabels:
      key45: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value9
          key38: value46
          key10: value18
      podSelector:
        matchLabels:
          key1: value29
